{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 27,
  "lineage": "3ff8c43c-3d3a-dd26-bf12-2457c076745b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418044:subnet/subnet-0fefa90c448b01e5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fefa90c448b01e5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264418044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07dce50114bed2ce4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "id": "subnet-0fefa90c448b01e5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ishika_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418044:vpc/vpc-07dce50114bed2ce4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06651a21d98bf9f52",
            "default_route_table_id": "rtb-010152acc4cad67df",
            "default_security_group_id": "sg-07691afc3d808809f",
            "dhcp_options_id": "dopt-047521e18cd422ff3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07dce50114bed2ce4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010152acc4cad67df",
            "owner_id": "058264418044",
            "region": "us-east-1",
            "tags": {
              "Name": "ishika_vpc"
            },
            "tags_all": {
              "Name": "ishika_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "id": "vpc-07dce50114bed2ce4",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:058264418044:instance/i-07b7d58f0e263f63c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b7d58f0e263f63c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ishika-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b4278aeee7af6b2a"
              }
            ],
            "primary_network_interface_id": "eni-0b4278aeee7af6b2a",
            "private_dns": "ip-10-0-1-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-3-89-107-42.compute-1.amazonaws.com",
            "public_ip": "3.89.107.42",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0359e281efed29462",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08204f45d1633c115",
            "tags": {
              "Name": "HelloIshi"
            },
            "tags_all": {
              "Name": "HelloIshi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d7a03abd250f21e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "id": "i-07b7d58f0e263f63c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_security_group.this",
            "module.web.aws_subnet.public_1",
            "module.web.aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418044:internet-gateway/igw-07b062071e979fcd9",
            "id": "igw-07b062071e979fcd9",
            "owner_id": "058264418044",
            "region": "us-east-1",
            "tags": {
              "Name": "ishika-igw"
            },
            "tags_all": {
              "Name": "ishika-igw"
            },
            "vpc_id": "vpc-02620110a4ef4339b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07b062071e979fcd9",
            "id": "r-rtb-049b0aad8579eaafd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-049b0aad8579eaafd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-049b0aad8579eaafd"
          },
          "dependencies": [
            "module.web.aws_internet_gateway.igw",
            "module.web.aws_route_table.public_rt",
            "module.web.aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418044:route-table/rtb-049b0aad8579eaafd",
            "id": "rtb-049b0aad8579eaafd",
            "owner_id": "058264418044",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b062071e979fcd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ishika-public-rt"
            },
            "tags_all": {
              "Name": "ishika-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02620110a4ef4339b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "id": "rtb-049b0aad8579eaafd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae05dfef912c8c11",
            "region": "us-east-1",
            "route_table_id": "rtb-049b0aad8579eaafd",
            "subnet_id": "subnet-08204f45d1633c115"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_route_table.public_rt",
            "module.web.aws_subnet.public_1",
            "module.web.aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418044:security-group/sg-04d7a03abd250f21e",
            "description": "SG for HelloIshi",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d7a03abd250f21e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "182.156.35.190/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "HelloIshi-sg",
            "name_prefix": "",
            "owner_id": "058264418044",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HelloIshi-sg"
            },
            "tags_all": {
              "Name": "HelloIshi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02620110a4ef4339b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "id": "sg-04d7a03abd250f21e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418044:subnet/subnet-08204f45d1633c115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08204f45d1633c115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264418044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-02620110a4ef4339b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "id": "subnet-08204f45d1633c115",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_vpc.ishika_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ishika_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418044:vpc/vpc-02620110a4ef4339b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006c59f8d746fb7b0",
            "default_route_table_id": "rtb-0334be2e300db4f4b",
            "default_security_group_id": "sg-080f02ab975069d28",
            "dhcp_options_id": "dopt-047521e18cd422ff3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02620110a4ef4339b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0334be2e300db4f4b",
            "owner_id": "058264418044",
            "region": "us-east-1",
            "tags": {
              "Name": "ishika_vpc"
            },
            "tags_all": {
              "Name": "ishika_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264418044",
            "id": "vpc-02620110a4ef4339b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}